# MyShow

./: .gitignore  pyproject.toml
1/: dict.md
1/data_structure /: chain_map.py  counter.py  default_dict.py  heapq_my.py  nametuple.py  order_dict.py  queueu.py
1/data_structure /example/: settings.py
1/dict/: temp.py
1/mem/: dataclass+pydantic.py  memory_1.py  memory_2.py  memory_3.py  memory_4.py
2/: issue.md
