[tool.poetry]
name = "myshow"
version = "0.1.0"
description = ""
authors = ["andreyvaran <moscow.russia.mai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
pympler = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
